--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
+  "scripts": {
+    "lint": "npx eslint ."
+  },
   "devDependencies": {
     "eslint": "^8.12.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.4"
+    "eslint-plugin-import": "^2.25.4",
+    "husky": "^7.0.4"
   }
 }
